fixed spacing and classes issues

--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,19 @@ General
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300|Raleway);
 
 * {
-    margin: 0;
-    padding: 0;
+   margin: 0;
+   padding: 0;
 }
 
 html, 
 body {
-    width: 100%;
-    height: 100%;
+   width: 100%;
+   height: 100%;
 }
 
 body {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 300;
+   font-family: "Raleway", sans-serif;
+   font-weight: 300;
 }
 
 /*********************
@@ -25,36 +25,35 @@ Header
 *********************/
 
 .top {
-	margin-bottom: 20px;
-	border-bottom: 4px solid #bcbbbb;
+margin-bottom: 20px;
+border-bottom: 4px solid #bcbbbb;
 }
 
 .logo {
-	margin-top: 1%;
-	float: left;
-	padding-right: 50%
+margin-top: 1%;
+float: left;
+padding-right: 50%;
 }
 
-.site-header h1 {
-	padding-top: 4%;
-	font-size: 40px;
-	text-align: right;
+.site-header-h1 {
+padding-top: 4%;
+font-size: 40px;
+text-align: right;
 }
 
-.site-header h3 {
-	padding-bottom: 5%;
-	font-size: 25px;
-	text-align: right;
+.site-header-h3 {
+padding-bottom: 5%;
+font-size: 25px;
+text-align: right;
 }
 
 .img {
-	width: 100%;
-	margin-right: 0px;
-	margin-top: 20px;
+width: 100%;
+margin: 20px 0 0 0;
 }
 
 .col-md-10 {
-	padding: 0;
+padding: 0;
 }
 
 /*********************
@@ -62,19 +61,19 @@ Bottom
 *********************/
 
 .bottom {
-	margin-top: 40px;
+margin-top: 40px;
 }
 
 .paragraph {
-	font-size: 17px;
+font-size: 17px;
 }
 
 .image {
-	opacity: 0.7;
+opacity: 0.7;
 }
 
 .image:hover {
-	opacity: 1.0;
+opacity: 1.0;
 }
 
 /*********************
@@ -94,26 +93,26 @@ Media Queries
 		height: 200px;
 	}
 
-	.bottom h1 {
+	.bottom-h1 {
 		text-align: center;
 		margin-bottom: 40px;
 	}
 }
 
 @media screen and (max-width: 400px) {
-	.site-header h1 {
+	.site-header-h1 {
 		padding-top: 4%;
 		font-size: 40px;
 		text-align: center;
 	}
 
-	.site-header h3 {
+	.site-header-h3 {
 		padding-bottom: 5%;
 		font-size: 25px;
 		text-align: center;
 	}
 
-	.bottom h1 {
+	.bottom-h1 {
 		text-align: center;
 		margin-bottom: 40px;
 	}
